syntax = "proto3";

package ru.otus;

message SequenceMessage {
    int64 start = 1;
    int64 end = 2;
    int64 step = 3;
}

message ElementMessage {
    int64 current = 1;
}

service SequenceService {
    rpc getSequence(SequenceMessage) returns (stream ElementMessage);
}